--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -2245,33 +2245,19 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                 <subviews>
                                     <searchBar contentMode="redraw" placeholder="הקלידו כתובת או ביחרו חיפוש קודם" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulr-E7-krT">
-                                        <rect key="frame" x="0.0" y="0.0" width="524" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="592" height="44"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <connections>
                                             <outlet property="delegate" destination="hdu-mN-4y2" id="E1h-sv-d3G"/>
                                         </connections>
                                     </searchBar>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXM-D1-nPf">
-                                        <rect key="frame" x="524" y="7" width="76" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="76" id="dpF-8a-gJ6"/>
-                                        </constraints>
-                                        <state key="normal" title="בחירה">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="Tae-sj-idE" kind="unwind" unwindAction="unwindFromAddressEditorVC:" id="Ds8-1q-q9a"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.79215686269999996" green="0.79215686269999996" blue="0.80784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="ulr-E7-krT" firstAttribute="leading" secondItem="bEc-tq-uHy" secondAttribute="leading" id="7JC-gh-d3h"/>
-                                    <constraint firstAttribute="trailing" secondItem="BXM-D1-nPf" secondAttribute="trailing" id="8af-5W-STU"/>
-                                    <constraint firstItem="ulr-E7-krT" firstAttribute="top" secondItem="bEc-tq-uHy" secondAttribute="top" id="YgV-Wy-Lfz"/>
-                                    <constraint firstItem="BXM-D1-nPf" firstAttribute="centerY" secondItem="ulr-E7-krT" secondAttribute="centerY" id="eL3-Z1-JoR"/>
-                                    <constraint firstItem="BXM-D1-nPf" firstAttribute="leading" secondItem="ulr-E7-krT" secondAttribute="trailing" id="o0r-Df-QYi"/>
-                                    <constraint firstAttribute="bottom" secondItem="ulr-E7-krT" secondAttribute="bottom" id="r3s-E3-W1W"/>
+                                    <constraint firstItem="ulr-E7-krT" firstAttribute="trailing" secondItem="bEc-tq-uHy" secondAttribute="trailingMargin" id="39g-NY-jIE"/>
+                                    <constraint firstAttribute="bottom" secondItem="ulr-E7-krT" secondAttribute="bottom" id="5OL-57-a9S"/>
+                                    <constraint firstItem="ulr-E7-krT" firstAttribute="leading" secondItem="bEc-tq-uHy" secondAttribute="leading" id="9P4-EF-AfH"/>
+                                    <constraint firstItem="ulr-E7-krT" firstAttribute="top" secondItem="bEc-tq-uHy" secondAttribute="top" id="gde-7V-upf"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="LFz-Xi-WxG">
@@ -2305,6 +2291,7 @@
                     <connections>
                         <outlet property="searchBar" destination="ulr-E7-krT" id="vmu-ll-Osr"/>
                         <outlet property="tableView" destination="LFz-Xi-WxG" id="7pU-qW-3xN"/>
+                        <segue destination="Tae-sj-idE" kind="unwind" identifier="unwindFromAddressEditorVC" unwindAction="unwindFromAddressEditorVC:" id="EpX-iN-Lgs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fDE-GL-Iku" userLabel="First Responder" sceneMemberID="firstResponder"/>
